to resolve the cropping of the bottom cryptocuurencies

--- a/packages/core/src/sass/account-wizard.scss
+++ b/packages/core/src/sass/account-wizard.scss
@@ -387,6 +387,11 @@
             padding: 1.5rem;
             background-color: var(--general-main-1);
         }
+        @media screen and (max-height: 667px) {
+            .dc-form-submit-button {
+                position: sticky;
+            }
+        }
         & .dc-btn {
             width: 100%;
         }
